--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -43,7 +43,6 @@ DataTransporters.AnnotationsImporter.notFromOMERO = The current image is not fro
 DataTransporters.AnnotationsImporter.retrievingServer = Retrieving server information...
 DataTransporters.AnnotationsImporter.serverError = Server error
 DataTransporters.AnnotationsImporter.cannotGetServerInformation = Cannot get server information of {0}
-DataTransporters.AnnotationsImporter.dataToSend = Data to send
 DataTransporters.AnnotationsImporter.importingAnnotations = Importing annotations...
 DataTransporters.AnnotationsImporter.noAnnotations = No annotations
 DataTransporters.AnnotationsImporter.noAnnotationsFound = No annotations were found, or an error occurred while retrieving them.
@@ -55,7 +54,6 @@ DataTransporters.AnnotationsImporter.XAnnotationImported = {0} annotations have 
 
 DataTransporters.ImageSettingsImporter.importImageSettings = Import image settings
 DataTransporters.ImageSettingsImporter.notFromOMERO = The current image is not from OMERO!
-DataTransporters.ImageSettingsImporter.dataToSend = Data to send
 DataTransporters.ImageSettingsImporter.importingAnnotations = Importing image settings...
 DataTransporters.ImageSettingsImporter.couldNotGetImage = Could not retrieve image parameters.
 DataTransporters.ImageSettingsImporter.imageNameUpdated = Image name updated.
@@ -74,7 +72,7 @@ DataTransporters.KeyValuesImporter.gettingKeyValuePairs = Getting key-value pair
 DataTransporters.KeyValuesImporter.couldNotRetrieveKeyValues = Could not retrieve key-value pairs from OMERO.
 DataTransporters.KeyValuesImporter.noKeyValuePairFound = No key-value pair found in the OMERO server.
 DataTransporters.KeyValuesImporter.keyValuesImported = Key-value pairs imported to the QuPath image.
-DataTransporters.KeyValuesImporter.nokeyValuesAdded = No key-value pair was added to the current QuPath image.
+DataTransporters.KeyValuesImporter.noKeyValuesAdded = No key-value pair was added to the current QuPath image.
 DataTransporters.KeyValuesImporter.followingKeyValuesAdded = The following key-value pairs were added to the current QuPath image:\n{0}.
 DataTransporters.KeyValuesImporter.followingKeyValuesNotAdded = The following key-value pairs were not added to the current QuPath image because of duplicates:\n{0}.
 
