Advanced search title

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -186,6 +186,7 @@ Browser.ServerBrowser.AdvancedInformation.addedOwned = Added by: {0}\nOwned by: 
 Browser.ServerBrowser.AdvancedInformation.addedOwnedType = Added by: {0}\nOwned by: {1}\nType: {2}
 Browser.ServerBrowser.AdvancedInformation.bytes = bytes
 
+Browser.ServerBrowser.AdvancedSearch.advancedSearch = Advanced search
 Browser.ServerBrowser.AdvancedSearch.search = Search
 Browser.ServerBrowser.AdvancedSearch.errorOccurred = An error occurred: {0}
 Browser.ServerBrowser.AdvancedSearch.import = Import
