Remove apply button and improve reopening behaviour

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -173,9 +173,8 @@ Browser.ServerBrowser.Settings.msPixelBufferAPIPort = Server port
 Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = The OMERO server port used by the pixel buffer microservice (default: 8082).
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Cancel
-Browser.ServerBrowser.Settings.apply = Apply
 Browser.ServerBrowser.Settings.saved = Parameters saved
-Browser.ServerBrowser.Settings.parametersSaved = The parameters have been saved
+Browser.ServerBrowser.Settings.parametersSaved = The parameters have been saved.
 
 Browser.ServerBrowser.AdvancedInformation.details = Details
 Browser.ServerBrowser.AdvancedInformation.id = Id
