Better error handling

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -173,6 +173,10 @@ Browser.ServerBrowser.Settings.msPixelBufferAPIPort = Server port
 Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = The OMERO server port used by the pixel buffer microservice (default: 8082).
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Cancel
+Browser.ServerBrowser.Settings.error = Error
+Browser.ServerBrowser.Settings.invalidJpegQuality = Invalid JPEG quality.
+Browser.ServerBrowser.Settings.iceServerPort = Invalid ICE server port.
+Browser.ServerBrowser.Settings.invalidPixelBufferMicroservicePort = Invalid pixel buffer microservice port.
 Browser.ServerBrowser.Settings.saved = Parameters saved
 Browser.ServerBrowser.Settings.parametersSaved = The parameters have been saved.
 
