--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -218,6 +218,8 @@ Browser.ServerBrowser.AdvancedSearch.imported = Imported
 Browser.ServerBrowser.AdvancedSearch.group = Group
 Browser.ServerBrowser.AdvancedSearch.link = Link
 
+Browser.ServerBrowser.AdvancedSearch.TypeCellFactory.couldNotRetrieveIcon = Could not retrieve icon
+
 Browser.ServerBrowser.Hierarchy.numberOfChannels = ✗ Number of channels unsupported
 Browser.ServerBrowser.Hierarchy.pixelType = ✗ Pixel type unsupported
 Browser.ServerBrowser.Hierarchy.pixelAPI = ✗ Pixel API unavailable
