Annotation importer and sender only show owners having access to image

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -40,9 +40,9 @@ DataTransporters.Forms.SendKeyValuePairs.replaceExisting = Replace existing key-
 
 DataTransporters.AnnotationsImporter.importAnnotations = Import annotations
 DataTransporters.AnnotationsImporter.notFromOMERO = The current image is not from OMERO!
-DataTransporters.AnnotationsImporter.retrievingServer = Retrieving server information...
+DataTransporters.AnnotationsImporter.retrievingOwners = Retrieving owners having access to the image...
 DataTransporters.AnnotationsImporter.serverError = Server error
-DataTransporters.AnnotationsImporter.cannotGetServerInformation = Cannot get server information of {0}
+DataTransporters.AnnotationsImporter.cannotRetrieveOwners = Cannot retrieve owners of {0}
 DataTransporters.AnnotationsImporter.importingAnnotations = Importing annotations...
 DataTransporters.AnnotationsImporter.noAnnotations = No annotations
 DataTransporters.AnnotationsImporter.noAnnotationsFound = No annotations were found, or an error occurred while retrieving them.
@@ -78,9 +78,9 @@ DataTransporters.KeyValuesImporter.followingKeyValuesNotAdded = The following ke
 
 DataTransporters.AnnotationsSender.sendAnnotations = Send annotations
 DataTransporters.AnnotationsSender.dataToSend = Data to send
-DataTransporters.AnnotationsSender.retrievingServer = Retrieving server information...
+DataTransporters.AnnotationsSender.retrievingOwners = Retrieving owners having access to the image...
 DataTransporters.AnnotationsSender.serverError = Server error
-DataTransporters.AnnotationsSender.cannotGetServerInformation = Cannot get server information of {0}
+DataTransporters.AnnotationsSender.cannotRetrieveOwners = Cannot retrieve owners of {0}
 DataTransporters.AnnotationsSender.sendingAnnotations = Sending annotations...
 DataTransporters.AnnotationsSender.noAnnotations = No annotation to send!
 DataTransporters.AnnotationsSender.operationSucceeded = Operation succeeded: {0}.
