--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -12,6 +12,7 @@ DataTransporters.Forms.ImageSettings.channelColors = Channel colors
 DataTransporters.Forms.ImageSettings.channelDisplayRanges = Channel display ranges
 
 DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom = Import annotations from
+DataTransporters.Forms.ImportAnnotations.all = All
 DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Delete current QuPath annotations
 DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Delete current QuPath detections
 
@@ -40,12 +41,11 @@ DataTransporters.Forms.SendKeyValuePairs.replaceExisting = Replace existing key-
 
 DataTransporters.AnnotationsImporter.importAnnotations = Import annotations
 DataTransporters.AnnotationsImporter.notFromOMERO = The current image is not from OMERO!
-DataTransporters.AnnotationsImporter.retrievingOwners = Retrieving owners having access to the image...
-DataTransporters.AnnotationsImporter.serverError = Server error
-DataTransporters.AnnotationsImporter.cannotRetrieveOwners = Cannot retrieve owners of {0}
-DataTransporters.AnnotationsImporter.importingAnnotations = Importing annotations...
+DataTransporters.AnnotationsImporter.retrievingAnnotations = Retrieving annotations...
+DataTransporters.AnnotationsImporter.annotationImportError = Annotation import error
+DataTransporters.AnnotationsImporter.cannotRetrieveAnnotations = Cannot retrieve annotations of {0}. Check the logs for more information.
 DataTransporters.AnnotationsImporter.noAnnotations = No annotations
-DataTransporters.AnnotationsImporter.noAnnotationsFound = No annotations were found, or an error occurred while retrieving them.
+DataTransporters.AnnotationsImporter.noAnnotationsFound = No annotations were found.
 DataTransporters.AnnotationsImporter.currentAnnotationsDeleted = Current annotations have been deleted.
 DataTransporters.AnnotationsImporter.currentDetectionsDeleted = Current detections have been deleted.
 DataTransporters.AnnotationsImporter.1WrittenSuccessfully = Annotation written successfully
