Select from which owner to delete the measurements

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -26,7 +26,7 @@ DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Delete existi
 DataTransporters.Forms.SendAnnotations.send = Send:
 DataTransporters.Forms.SendAnnotations.onlySelectedAnnotations = Only selected annotations
 DataTransporters.Forms.SendAnnotations.allAnnotations = All annotations
-DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Delete existing OMERO measurements
+DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Delete existing OMERO measurements from
 DataTransporters.Forms.SendAnnotations.annotationMeasurements = Annotation measurements
 DataTransporters.Forms.SendAnnotations.detectionMeasurements = Detection measurements
 
