KVP not merged when sent to OMERO

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -105,6 +105,7 @@ DataTransporters.ImageSettingsSender.channelColors = Channel colors
 DataTransporters.ImageSettingsSender.channelDisplayRanges = Channel display ranges
 
 DataTransporters.KeyValuesSender.sendKeyValues = Send key-value pairs
+DataTransporters.KeyValuesSender.noKeyValueSelected = No key-value pair was selected!
 DataTransporters.KeyValuesSender.sendingKeyValues = Sending key-value pairs...
 DataTransporters.KeyValuesSender.projectNotOpened = A project must be opened in QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = The current image is not from OMERO!
