Three attempts when sending ping + message when ping failed

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -1,3 +1,6 @@
+Utils.connectionError = Connection error
+Utils.connectionClosed = The connection to {0} was closed because the ping to the server failed. See the logs for more information.
+
 Extension.name = OMERO extension
 Extension.description = Adds the ability to browse OMERO servers and open images hosted on OMERO servers.
 Extension.sendToOMERO = Send to OMERO
