--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -113,6 +113,7 @@ DataTransporters.KeyValuesSender.sendingKeyValues = Sending key-value pairs...
 DataTransporters.KeyValuesSender.projectNotOpened = A project must be opened in QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = The current image is not from OMERO!
 DataTransporters.KeyValuesSender.noValues = The current image does not contain any key-value pairs.
+DataTransporters.KeyValuesSender.cannotGetExistingKvp = Cannot get existing key-value pairs of the image.
 DataTransporters.KeyValuesSender.gettingExistingNamespaces = Getting existing namespaces...
 DataTransporters.KeyValuesSender.keyValuesSent = Key-value pairs sent to the server.
 DataTransporters.KeyValuesSender.keyValuesNotSent = Key-value pairs not sent to the server.\nDo you have sufficient rights to write values to the OMERO image?
