Improve UI when opening images

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -267,10 +267,10 @@ Login.LoginForm.connect = Connect
 
 Login.WaitingWindow.cancel = Cancel
 
-UiUtilities.noImages = No images
-UiUtilities.noValidImagesInSelected = No valid images found in the selected items!
-UiUtilities.openImages = Open images
-UiUtilities.createProjectFirst = If you want to handle multiple images, you need to create a project first.
+ImageOpener.opening = Opening {0}...
+ImageOpener.fetchingInformation = Fetching information on {0}...
+ImageOpener.imageOpening = Image opening
+ImageOpener.errorWhileRetrievingImage = Error while retrieving images contained in {0}. See the logs for more information.
 
 Entities.Annotation.Comment.title = Comments
 Entities.Annotation.File.title = Attachments
