--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -271,6 +271,7 @@ ImageOpener.opening = Opening {0}...
 ImageOpener.fetchingInformation = Fetching information on {0}...
 ImageOpener.imageOpening = Image opening
 ImageOpener.errorWhileRetrievingImage = Error while retrieving images contained in {0}. See the logs for more information.
+ImageOpener.noImageFound = No image was found in {0}.
 
 Entities.Annotation.Comment.title = Comments
 Entities.Annotation.File.title = Attachments
