--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,12 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
+        path: build/reports/tests/
+        name: reports
+        retention-days: 7
+
+    - uses: actions/upload-artifact@v4
+      with:
         path: build/libs/*.jar
         name: build
         retention-days: 7
