--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
         ./gradlew build
 
     - uses: actions/upload-artifact@v4
+      if: always()
       with:
         path: build/reports/tests/
         name: reports
