Add image parent information in advanced search

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -219,6 +219,12 @@ Browser.ServerBrowser.AdvancedSearch.acquired = Acquired
 Browser.ServerBrowser.AdvancedSearch.imported = Imported
 Browser.ServerBrowser.AdvancedSearch.group = Group
 Browser.ServerBrowser.AdvancedSearch.link = Link
+Browser.ServerBrowser.AdvancedSearch.parentProject = Parent project
+Browser.ServerBrowser.AdvancedSearch.parentDataset = Parent dataset
+Browser.ServerBrowser.AdvancedSearch.parentScreen = Parent screen
+Browser.ServerBrowser.AdvancedSearch.parentPlate = Parent plate
+Browser.ServerBrowser.AdvancedSearch.parentPlateAcquisition = Parent run
+Browser.ServerBrowser.AdvancedSearch.parentWell = Parent well
 
 Browser.ServerBrowser.AdvancedSearch.TypeCellFactory.couldNotRetrieveIcon = Could not retrieve icon
 
