--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -14,9 +14,8 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
-
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
-
       - name: Release
         env:
           GH_TOKEN: ${{ github.token }}
