adding scripts to OMERO menu

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -5,6 +5,7 @@ Extension.name = OMERO extension
 Extension.description = Adds the ability to browse OMERO servers and open images hosted on OMERO servers.
 Extension.sendToOMERO = Send to OMERO
 Extension.importFromOMERO = Import from OMERO
+Extension.sampleScripts = Sample OMERO scripts
 Extension.automaticallyImport = Automatically import key-value pairs of default namespace and parent entities information
 Extension.automaticallyImportWhenAddingImage = Automatically import key-value pairs of default namespace and parent entities ID and name when adding an OMERO image to a QuPath project
 
