--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -5,7 +5,6 @@ Extension.name = OMERO extension
 Extension.description = Adds the ability to browse OMERO servers and open images hosted on OMERO servers.
 Extension.sendToOMERO = Send to OMERO
 Extension.importFromOMERO = Import from OMERO
-Extension.sampleScripts = Sample OMERO scripts
 Extension.automaticallyImport = Automatically import key-value pairs of default namespace and parent entities information
 Extension.automaticallyImportWhenAddingImage = Automatically import key-value pairs of default namespace and parent entities ID and name when adding an OMERO image to a QuPath project
 
@@ -118,6 +117,18 @@ DataTransporters.KeyValuesSender.cannotGetExistingKvp = Cannot get existing key-
 DataTransporters.KeyValuesSender.gettingExistingNamespaces = Getting existing namespaces...
 DataTransporters.KeyValuesSender.keyValuesSent = Key-value pairs sent to the server.
 DataTransporters.KeyValuesSender.keyValuesNotSent = Key-value pairs not sent to the server.\nDo you have sufficient rights to write values to the OMERO image?
+
+SampleScriptMenu.sampleScripts = Sample scripts
+SampleScriptMenu.openServer = Open server
+SampleScriptMenu.openImagesOfProject = Open images of project
+SampleScriptMenu.openImageFromCommandLine = Open image from command line
+SampleScriptMenu.sendAnnotations = Send annotations
+SampleScriptMenu.sendMeasurements = Send measurements
+SampleScriptMenu.sendKVP = Send key value pairs
+SampleScriptMenu.sendImageSettings = Send image settings
+SampleScriptMenu.importAnnotations = Import annotations
+SampleScriptMenu.importKVP = Import key value pairs
+SampleScriptMenu.importImageSettings = Import image settings
 
 Browser.BrowseMenu.browseServer = Browse server...
 Browser.BrowseMenu.newServer = New server...
