--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -187,7 +187,7 @@ Browser.ServerBrowser.Settings.iceAPIServerPort = Server port
 Browser.ServerBrowser.Settings.iceAPIServerPortDescription = The port of the omero.server (ICE) instance (which can be different from the omero.web instance). This parameter should only be specified if importing an image with the Ice API doesn't work.
 Browser.ServerBrowser.Settings.msPixelBufferAPI = Pixel Buffer microservice API
 Browser.ServerBrowser.Settings.msPixelBufferAPIPort = Server port
-Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = The OMERO server port used by the pixel buffer microservice (default: 8082).
+Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = The OMERO server port used by the pixel buffer microservice. The default (443) is like specifying no port at all.
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Cancel
 Browser.ServerBrowser.Settings.error = Error
