Adapt strings resources

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -1,5 +1,5 @@
-Utils.connectionError = Connection error
-Utils.connectionClosed = The connection to {0} was closed because the ping to the server failed. See the logs for more information.
+UiUtils.connectionError = Connection error
+UiUtils.connectionClosed = The connection to {0} was closed because the ping to the server failed. See the logs for more information.
 
 Extension.name = OMERO extension
 Extension.description = Adds the ability to browse OMERO servers and open images hosted on OMERO servers.
@@ -153,7 +153,6 @@ Browser.ServerBrowser.noAccessRawPixels = No access to raw pixel data
 Browser.ServerBrowser.settings = Settings
 Browser.ServerBrowser.loadingEntities = Loading entities...
 Browser.ServerBrowser.entitiesLoadedBackground = Entities are loaded in the background...
-Browser.ServerBrowser.orphanedImagesLoadedBackground = Orphaned images are loaded in the background...
 Browser.ServerBrowser.loadingThumbnails = Loading thumbnails...
 Browser.ServerBrowser.thumbnailsLoadedBackground = Thumbnails are loaded in the background...
 Browser.ServerBrowser.moreInfo = More info...
@@ -170,7 +169,6 @@ Browser.ServerBrowser.value = Value
 Browser.ServerBrowser.copyURIToClipboard = Copy URL to clipboard
 Browser.ServerBrowser.uriSuccessfullyCopied =  URL successfully copied to clipboard.
 Browser.ServerBrowser.itemNeedsSelected = The item needs to be selected first!
-Browser.ServerBrowser.loadingOrphanedImages = Loading orphaned images
 Browser.ServerBrowser.noElementSelected = No element selected
 Browser.ServerBrowser.multipleElementsSelected = Multiple elements selected
 Browser.ServerBrowser.cantDisplayInformation = Can't display object information
@@ -298,12 +296,6 @@ ImageOpener.fetchingInformation = Fetching information on {0}...
 ImageOpener.imageOpening = Image opening
 ImageOpener.errorWhileRetrievingImage = Error while retrieving images contained in {0}. See the logs for more information.
 ImageOpener.noImageFound = No image was found in {0}.
-
-Entities.Annotation.Comment.title = Comments
-Entities.Annotation.File.title = Attachments
-Entities.Annotation.Map.title = Key-Value pairs
-Entities.Annotation.Rating.title = Ratings
-Entities.Annotation.Tag.title = Tags
 
 Entities.Image.name = Name
 Entities.Image.id = Id
