Use owner ID and name in annotation importer

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -15,7 +15,6 @@ DataTransporters.Forms.ImageSettings.channelColors = Channel colors
 DataTransporters.Forms.ImageSettings.channelDisplayRanges = Channel display ranges
 
 DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom = Import annotations from
-DataTransporters.Forms.ImportAnnotations.all = All
 DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Delete current QuPath annotations
 DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Delete current QuPath detections
 
@@ -360,4 +359,4 @@ Entities.RepositoryEntities.Server.server = Server
 
 Entities.Permissions.Group.allGroups = All groups
 
-Entities.Permissions.Owner.allMembers = All members
+Entities.Permissions.Experimenter.allExperimenters = All members
