Normalize entities requests

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -296,62 +296,29 @@ ImageOpener.imageOpening = Image opening
 ImageOpener.errorWhileRetrievingImage = Error while retrieving images contained in {0}. See the logs for more information.
 ImageOpener.noImageFound = No image was found in {0}.
 
-Entities.Image.name = Name
-Entities.Image.id = Id
-Entities.Image.owner = Owner
-Entities.Image.group = Group
-Entities.Image.acquisitionDate = Acquisition date
-Entities.Image.imageWidth = Image width
-Entities.Image.imageHeight = Image height
-Entities.Image.uncompressedSize = Uncompressed size
-Entities.Image.nbChannels = Nb of channels
-Entities.Image.nbZSlices = Nb of z-slices
-Entities.Image.nbTimePoints = Nb of timepoints
-Entities.Image.pixelSizeX = Pixel size X
-Entities.Image.pixelSizeY = Pixel size Y
-Entities.Image.pixelSizeZ = Pixel size Z
-Entities.Image.pixelType = Pixel type
-
-Entities.Dataset.name = Name
-Entities.Dataset.id = Id
-Entities.Dataset.description = Description
-Entities.Dataset.owner = Owner
-Entities.Dataset.group = Group
-Entities.Dataset.nbImages = Num. images
-
-Entities.Project.name = Name
-Entities.Project.id = Id
-Entities.Project.description = Description
-Entities.Project.owner = Owner
-Entities.Project.group = Group
-Entities.Project.nbDatasets = Num. datasets
-
-Entities.Well.name = Name
-Entities.Well.id = Id
-Entities.Well.owner = Owner
-Entities.Well.group = Group
-Entities.Well.column = Column
-Entities.Well.row = Row
-
-Entities.PlateAcquisition.name = Name
-Entities.PlateAcquisition.id = Id
-Entities.PlateAcquisition.owner = Owner
-Entities.PlateAcquisition.group = Group
-Entities.PlateAcquisition.acquisitionTime = Acquisition date
-
-Entities.Plate.name = Name
-Entities.Plate.id = Id
-Entities.Plate.owner = Owner
-Entities.Plate.group = Group
-Entities.Plate.columns = Columns
-Entities.Plate.rows = Rows
-
-Entities.Screen.name = Name
-Entities.Screen.id = Id
-Entities.Screen.description = Description
-Entities.Screen.owner = Owner
-Entities.Screen.group = Group
-Entities.Screen.nbPlates = Num. plates
+Entities.name = Name
+Entities.id = Id
+Entities.description = Description
+Entities.owner = Owner
+Entities.group = Group
+Entities.nbImages = Num. images
+Entities.acquisitionDate = Acquisition date
+Entities.uncompressedSize = Uncompressed size
+Entities.imageWidth = Image width
+Entities.imageHeight = Image height
+Entities.nbChannels = Nb of channels
+Entities.nbZSlices = Nb of z-slices
+Entities.nbTimePoints = Nb of timepoints
+Entities.pixelSizeX = Pixel size X
+Entities.pixelSizeY = Pixel size Y
+Entities.pixelSizeZ = Pixel size Z
+Entities.pixelType = Pixel type
+Entities.columns = Columns
+Entities.rows = Rows
+Entities.nbDatasets = Num. datasets
+Entities.nbPlates = Num. plates
+Entities.column = Column
+Entities.row = Row
 
 Entities.RepositoryEntities.OrphanedFolder.orphanedImages = Orphaned Images
 
