Add setting in user interface

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -174,6 +174,9 @@ Browser.ServerBrowser.cantDisplayInformation = Can't display object information
 Browser.ServerBrowser.errorWhenFetchingInformation = Error when fetching information of {0}: {1}
 
 Browser.ServerBrowser.Settings.title = Settings
+Browser.ServerBrowser.Settings.allAPI = All APIs
+Browser.ServerBrowser.Settings.maximalBodySize = Maximum request body size (MB)
+Browser.ServerBrowser.Settings.maximalBodySizeDescription = The maximum size in megabyte (MB) that a request body can have when sending a web request to one of the APIs. Not all requests will comply with this parameter.\nThis parameter was added because, by default, the OMERO web server doesn't accept request bodys with size higher than the DATA_UPLOAD_MAX_MEMORY_SIZE Django parameter (2.62144 MB by default).
 Browser.ServerBrowser.Settings.webAPI = Web API
 Browser.ServerBrowser.Settings.webAPIJpegQuality = JPEG quality
 Browser.ServerBrowser.Settings.webAPIJpegQualityDescription = The JPEG quality used by the Web pixel API (from 0 to 1, default: 0.9).
@@ -190,6 +193,7 @@ Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = The OMERO serve
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Cancel
 Browser.ServerBrowser.Settings.error = Error
+Browser.ServerBrowser.Settings.invalidMaxBodySize = Invalid maximum request body size.
 Browser.ServerBrowser.Settings.invalidJpegQuality = Invalid JPEG quality.
 Browser.ServerBrowser.Settings.iceServerPort = Invalid ICE server port.
 Browser.ServerBrowser.Settings.iceNumberOfReaders = Invalid ICE number of readers.
