Improve image opening when project not present

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -296,6 +296,7 @@ Login.WaitingWindow.cancel = Cancel
 
 ImageOpener.opening = Opening {0}...
 ImageOpener.fetchingInformation = Fetching information on {0}...
+ImageOpener.open = Open
 ImageOpener.imageOpening = Image opening
 ImageOpener.errorWhileRetrievingImage = Error while retrieving images contained in {0}. See the logs for more information.
 ImageOpener.noImageFound = No image was found in {0}.
